test add splitter

--- a/examples/js_compare.html
+++ b/examples/js_compare.html
@@ -139,10 +139,10 @@
     let cmudictReady = loadCmudict(cmudict,'../dictionaries/cmudict-0.7b')
     let ipadictReady = loadCmudict(cmudict_ipa,'../dictionaries/unknown_license_cmudict-0.7b-ipa.txt',"\t")
 
-    loadDataAndProcess(); 
+    //loadDataAndProcess(); 
 
     
-    const result = await do_test("ABDICATED") //AARON
+    const result = await do_test("AANCOR") //AARON
     console.log(result)
 
     
