add modify 124995 correct = 120780 sub =257

--- a/examples/js_compare.html
+++ b/examples/js_compare.html
@@ -142,7 +142,7 @@
     loadDataAndProcess(); 
 
     
-    const result = await do_test("AANCOR") //AARON
+    const result = await do_test("ADMINISTER") //AARON
     console.log(result)
 
     
