--- a/examples/matcha_tts_info.html
+++ b/examples/matcha_tts_info.html
@@ -11,7 +11,7 @@
     <script src="./js-esm/ort.min.js"></script>
     
     <script type="module">
-        import { MatchaOnnx } from "./js-esm/matcha_tts_en.js";
+        import { MatchaOnnx } from "./js-esm/matcha_tts_raw.js";
 
         let matcha_onnx
         async function main() {
