--- a/examples/matcha_tts_info.html
+++ b/examples/matcha_tts_info.html
@@ -14,7 +14,7 @@
     
     <script type="module">
         //trying full local access,If you seee file not found error get ,set file url and get from https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/
-        ort.env.wasm.wasmPaths = "/examples/js-esm/"
+        ort.env.wasm.wasmPaths = "/js-esm/"
         import { MatchaTTSRaw } from "./js-esm/matcha_tts_raw.js";
         let matcha_onnx
         async function main() {
