--- a/examples/matcha_tts_info.html
+++ b/examples/matcha_tts_info.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Matcha TTS Model Info(Local)</h1>
+    <div>this example using Quantized version(lowquality and slow) because of Github Page 100MB limitation</div>
     <div id="result"></div>
     
    
