--- a/examples/index.html
+++ b/examples/index.html
@@ -3,6 +3,18 @@
         <title>Examples</title>
     </head>
     <body>
-        <a href="matcha_tts_info">Onnx Info</a>
+        <h1>Matcha TTS</h1>
+        <a href="matcha_tts_info.html">Print Onnx input and output Info and Local only Onnx</a><br>
+        <a href="matcha_tts_speak.html">Matcha-TTS ONNX speak with this repo's ipa converter</a><br>
+
+        <div id="footer">
+            <a href="https://github.com/shivammehta25/Matcha-TTS" style="font-size: 9px" target="link">Matcha TTS</a> | 
+            <a href = "http://www.udialogue.org/download/cstr-vctk-corpus.html" style="font-size: 9px"  target="link">CSTR VCTK Corpus</a> |
+            <a href = "https://github.com/cmusphinx/cmudict" style="font-size: 9px"  target="link">CMUDict</a> |
+            <a href = "https://huggingface.co/docs/transformers.js/index" style="font-size: 9px"  target="link">Transformer.js</a> |
+            <a href = "https://huggingface.co/cisco-ai/mini-bart-g2p" style="font-size: 9px"  target="link">mini-bart-g2p</a> |
+            <a href = "https://onnxruntime.ai/docs/get-started/with-javascript/web.html" style="font-size: 9px"  target="link">ONNXRuntime-Web</a> |
+            <a href = "https://github.com/akjava/English-To-IPA-Collections" style="font-size: 9px"  target="link">English-To-IPA-Collections</a> 
+            </div>
     </body>
 </html>
