--- a/examples/index.html
+++ b/examples/index.html
@@ -3,7 +3,8 @@
         <title>Examples</title>
     </head>
     <body>
-        <h1>Matcha TTS</h1>
+        <h1>English-To-IPA-Collections Examples</h1>
+
         <a href="matcha_tts_info.html">Print Onnx input and output Info and Local only Onnx</a><br>
         <a href="matcha_tts_speak.html">Matcha-TTS ONNX speak with this repo's ipa converter</a><br>
 
