add cmudict to ipa

--- a/examples/index.html
+++ b/examples/index.html
@@ -4,10 +4,11 @@
     </head>
     <body>
         <h1>English-To-IPA-Collections Examples</h1>
-
+        <br>
         <a href="matcha_tts_info.html">Print Onnx input and output Info and Local only Onnx</a><br>
         <a href="matcha_tts_speak.html">Matcha-TTS ONNX speak with this repo's ipa converter</a><br>
-
+        <a href="cmduict_to_ipa.html">Convert Cmudict to ipa</a><br>
+        <br>
         <div id="footer">
             <a href="https://github.com/shivammehta25/Matcha-TTS" style="font-size: 9px" target="link">Matcha TTS</a> | 
             <a href = "http://www.udialogue.org/download/cstr-vctk-corpus.html" style="font-size: 9px"  target="link">CSTR VCTK Corpus</a> |
